Bug 280027 - make sure gradient stops are in a form GDI+ will accept. r=scooter